<resources>
    <string name="app_name">Send Meal</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nuevoPlato">Nuevo Plato</string>
    <string name="nombrePlato" />
    <string name="descripcion">Descripcion</string>
    <string name="descripcion2">Descripcion:</string>
    <string name="titulo">Titulo</string>
    <string name="precio">Precio</string>
    <string name="precio2">Precio:</string>

    <string name="guardar">Guardar</string>
    <string name="caloria">Calorias</string>
    <string name="caloria2">Calorias:</string>
    <string name="agregarPlato">Agregar Plato</string>
    <string name="listarPlatos">Comidas</string>
    <string name="registro">Registrarse</string>
</resources>